--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@openzeppelin/contracts": "^4.2.0",
-    "hardhat": "^2.4.3"
+    "hardhat": "^2.4.3",
+    "mocha": "^9.0.3"
   }
 }
