--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.2.0",
+    "dotenv": "^10.0.0",
     "hardhat": "^2.4.3",
     "mocha": "^9.0.3"
   }
