--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.2.0",
     "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
     "dotenv": "^10.0.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.6",
     "hardhat": "^2.4.3",
     "mocha": "^9.0.3",
-    "ethers": "^5.4.6"
+    "solc-0.8": "npm:solc@^0.8.6"
   }
 }
