--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
+    "faker": "^5.5.3",
     "hardhat": "^2.4.3",
     "mocha": "^9.0.3",
     "solc-0.8": "npm:solc@^0.8.6"
